# isaaclab_train_tool

./: .gitignore  README.md  README_CN.md  config.py  config_dialog.py  i18n.py  launch.sh  main.py  main_window.py  models.py  pyproject.toml  requirements.txt  setup.py  tmux_manager.py  workspace_scanner.py
debian/: changelog  control  isaaclab-train-tool.desktop  postinst  prerm  rules
