[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab-train-tool"
version = "1.1.0"
description = "GUI tool for managing Isaac Lab training sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kaylor", email = "kaylor@kaylordut.com"}
]
keywords = ["isaac", "lab", "training", "rl", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "PyQt5>=5.15.0",
]

[project.scripts]
isaaclab-train-tool = "main:main"

[project.urls]
Homepage = "https://github.com/isaac-sim/IsaacLab"